# Smart-Credit-Scoring

./: .gitignore  CONTRIBUTING.md  README.md  example.py  main.py  main_fuzzy.py  pyproject.toml  requirements.txt
docs/: SEMI_SUPERVISED_GUIDE.md  TECHNICAL.md  USAGE.md
scripts/: run_pipeline.py
src/: __init__.py  evaluation.py  features.py  fuzzy_logic.py  model.py  models.py  preprocessing.py  train.py  utils.py  visualization.py
src/credit_anomaly/: __init__.py  cli.py  config.py  evaluation.py  models.py  pipeline.py  preprocessing.py  visualization.py
