[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-credit-scoring"
version = "0.1.0"
description = "Neural anomaly detection and correction for Home Credit data"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "pandas",
  "scikit-learn",
  "tensorflow",
  "lightgbm",
  "matplotlib",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
credit-anomaly-pipeline = "credit_anomaly.cli:main"
